--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 Отправте ваше сообщение в чат от имени "testing-models-one_Bot".
             </p>
             
-            <textarea type="text" class="sms message1" name="sms" id="sms" cols="30" rows="10"> sms: </textarea>
+            <textarea type="text" class="sms message1" name="sms" id="sms" cols="30" rows="10"></textarea>
             <button>send all</button>
         
         </div>
