--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>
                 Node JS
             </h1>
-            <p>Введите пожалуйста ваше <b>ИМЯ</b> <span> для идентификации, чтоб мы могли отследить где вы находитесь, прописку, кредитную линию: вашу и ваших родственников, историю болезней, индефикационные данные, все ваши логины и пароли.</span> (поле объязательное для ввода нажимая вы соглашаетесь с политикой нашего сайта)</span>*</p>
+            <p>Введите пожалуйста ваше <b>ИМЯ</b> <span> для идентификации, чтоб мы могли отследить где вы находитесь, прописку, кредитную линию: вашу и ваших родственников, историю болезней, индефикационные данные, все ваши логины и пароли.</span> (поле объязательное для ввода нажимая вы соглашаетесь с политикой нашего сайта)<span>*</span></p>
             <input class="name message" type="text" name="username" required autofocus placeholder="Имя Фамилия">
             <p>
                 Отправте ваше сообщение в чат от имени "testing-models-one_Bot".
