--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
             <textarea type="text" class="sms message1" name="sms" id="sms" cols="30" rows="10"></textarea>
             <button>send all</button>
-            <a href="#" onclick="new Audio('http://www.html5tutorial.info/media/vincent.mp3').play(); return false;">Play</a>
+            <!-- <a href="#" onclick="new Audio('http://www.html5tutorial.info/media/vincent.mp3').play(); return false;">Play</a> -->
         
         </div>
     </main>
